--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,7 @@ body {
     overflow-x: hidden;
     align-items: center;
     justify-content: center;
+    animation: fadeIn 1s ease-in-out;
 }
 
 .bottom {
@@ -93,7 +94,7 @@ body {
 nav {
     position: fixed;
     top: 10vmin;
-    right: 30vmin;
+    right: 35vmin;
     width: 15em;
     height: 10vh;
     display: flex;
@@ -320,6 +321,12 @@ h6.end[data-scroll="out"] .char {
     background-color: rgba(0, 0, 0, 0.5);
     justify-content: center;
     align-items: center;
+    user-select: none;
+}
+
+.modal.fade-out {
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
 }
 
 .modal-content {
